--- a/main.html
+++ b/main.html
@@ -7,7 +7,14 @@
 </head>
 
 <body>
-	<!-- the entire body must be written by student -->
+	<!-- the entire body must be written by student --
+<!-- 	<h1> -->
+	<h1 id="box">Heading 1</h1>
+	<h2 id="box2">Heading 2</h2>
+	<h3 id="box3">Heading 3</h3>
+	<h4 id="box4">Heading 4</h4>
+	<h5 id="box5">Heading 5</h5>
+	<h6 id="box6">Heading 6</h6>
     <script type="text/javascript" src="./script.js">
 </script>
 
